--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_pro">Pro verzió</string>
     <string name="menu_about">Névjegy</string>
     <string name="menu_help">Segítség</string>
+    <string name="menu_select_all">Select all</string>
     <string name="menu_all">Minden</string>
     <string name="menu_restriction_all">Korlátozások kapcsolása</string>
     <string name="menu_clear_all">Összes törlése</string>
@@ -45,6 +46,7 @@
     <string name="msg_saved_to" formatted="false">Elmentve ide: %s</string>
     <string name="msg_no_restrictions">Nem található korlátozás</string>
     <string name="msg_sure">Biztos benne?</string>
+    <string name="msg_select">You must select some applications first</string>
     <string name="msg_done">Kész</string>
     <string name="msg_reboot">Újraindítás szükséges</string>
     <string name="msg_random_now">Véletlenszerűsítés</string>
