--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_pro">Pro-version</string>
     <string name="menu_about">Om</string>
     <string name="menu_help">Hjælp</string>
+    <string name="menu_select_all">Select all</string>
     <string name="menu_all">Alle</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
     <string name="menu_clear_all">Clear all</string>
@@ -45,6 +46,7 @@
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">Er du sikker?</string>
+    <string name="msg_select">You must select some applications first</string>
     <string name="msg_done">Udført</string>
     <string name="msg_reboot">Genstart nødvendig</string>
     <string name="msg_random_now">Indlæs tilfældige værdier</string>
