--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_pro">Pro versio</string>
     <string name="menu_about">Tietoja</string>
     <string name="menu_help">Apua</string>
+    <string name="menu_select_all">Select all</string>
     <string name="menu_all">Kaikki</string>
     <string name="menu_restriction_all">Vaihda rajoitukset</string>
     <string name="menu_clear_all">Clear all</string>
@@ -45,6 +46,7 @@
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">Oletko varma?</string>
+    <string name="msg_select">You must select some applications first</string>
     <string name="msg_done">Valmis</string>
     <string name="msg_reboot">Laite on käynnistettävä uudelleen</string>
     <string name="msg_random_now">Randomize now</string>
