--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
     <string name="menu_help">Aide</string>
+    <string name="menu_select_all">Select all</string>
     <string name="menu_all">Tous</string>
     <string name="menu_restriction_all">Inverser restrictions</string>
     <string name="menu_clear_all">Tout effacer</string>
@@ -45,6 +46,7 @@
     <string name="msg_saved_to" formatted="false">Sauvé dans %s</string>
     <string name="msg_no_restrictions">Pas de restriction trouvée</string>
     <string name="msg_sure">Êtes-vous certain ?</string>
+    <string name="msg_select">You must select some applications first</string>
     <string name="msg_done">Effectué</string>
     <string name="msg_reboot">Redémarrage requis</string>
     <string name="msg_random_now">Randomiser maintenant</string>
