--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
     <string name="menu_help">Pomoč</string>
+    <string name="menu_select_all">Select all</string>
     <string name="menu_all">Vse</string>
     <string name="menu_restriction_all">Preklopi omejitve</string>
     <string name="menu_clear_all">Počisti vse</string>
@@ -45,6 +46,7 @@
     <string name="msg_saved_to" formatted="false">Shranjeno v %s</string>
     <string name="msg_no_restrictions">Ni bilo najdenih omejitev</string>
     <string name="msg_sure">Ste prepričani?</string>
+    <string name="msg_select">You must select some applications first</string>
     <string name="msg_done">Dokončano</string>
     <string name="msg_reboot">Zahtevan ponovni zagon</string>
     <string name="msg_random_now">Naključni podatki</string>
