--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_pro">Про верзија</string>
     <string name="menu_about">О</string>
     <string name="menu_help">Help</string>
+    <string name="menu_select_all">Select all</string>
     <string name="menu_all">Све</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
     <string name="menu_clear_all">Clear all</string>
@@ -45,6 +46,7 @@
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">Да ли сте сигурни?</string>
+    <string name="msg_select">You must select some applications first</string>
     <string name="msg_done">Готово</string>
     <string name="msg_reboot">Потребан ребут</string>
     <string name="msg_random_now">Randomize</string>
