--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">Er du sikker?</string>
     <string name="msg_select">You must select some applications first</string>
+    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
     <string name="msg_done">Udført</string>
     <string name="msg_reboot">Genstart nødvendig</string>
     <string name="msg_random_now">Indlæs tilfældige værdier</string>
