--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_no_restrictions">No se han encontrado restricciones</string>
     <string name="msg_sure">¿Estas seguro?</string>
     <string name="msg_select">You must select some applications first</string>
+    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
     <string name="msg_done">Completado</string>
     <string name="msg_reboot">Reinicio requerido</string>
     <string name="msg_random_now">Selección aleatoria</string>
