--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -49,6 +49,7 @@
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">آبااطمینان دارید؟</string>
     <string name="msg_select">You must select some applications first</string>
+    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
     <string name="msg_done">انحام شد</string>
     <string name="msg_reboot">لازم است دستگاه خاموش و روشن گردد</string>
     <string name="msg_random_now">رندم سازی</string>
