--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">An bhfuil tú cinnte?</string>
     <string name="msg_select">You must select some applications first</string>
+    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
     <string name="msg_done">Arna dhéanamh</string>
     <string name="msg_reboot">Atosú teastáil</string>
     <string name="msg_random_now">Randomize now</string>
