--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">אתה בטוח?</string>
     <string name="msg_select">You must select some applications first</string>
+    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
     <string name="msg_done">בוצע</string>
     <string name="msg_reboot">נדרש אתחול מחדש</string>
     <string name="msg_random_now">Randomize</string>
