--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -47,6 +47,7 @@
     <string name="msg_no_restrictions">制限などは見つかりませんでした</string>
     <string name="msg_sure">続行しますか</string>
     <string name="msg_select">You must select some applications first</string>
+    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
     <string name="msg_done">終了</string>
     <string name="msg_reboot">再起動して下さい</string>
     <string name="msg_random_now">ランダム化</string>
