--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -46,8 +46,8 @@
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">Oled sa kindel?</string>
-    <string name="msg_select">You must select some applications first</string>
-    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
+    <string name="msg_select">Please select some applications</string>
+    <string name="msg_limit">Please select fewer than %d applications</string>
     <string name="msg_done">Valmis</string>
     <string name="msg_reboot">Seadme taaskäivitus on vajalik</string>
     <string name="msg_random_now">Juhuslik</string>
