--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -46,8 +46,8 @@
     <string name="msg_saved_to" formatted="false">Elmentve ide: %s</string>
     <string name="msg_no_restrictions">Nem található korlátozás</string>
     <string name="msg_sure">Biztos benne?</string>
-    <string name="msg_select">You must select some applications first</string>
-    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
+    <string name="msg_select">Please select some applications</string>
+    <string name="msg_limit">Please select fewer than %d applications</string>
     <string name="msg_done">Kész</string>
     <string name="msg_reboot">Újraindítás szükséges</string>
     <string name="msg_random_now">Véletlenszerűsítés</string>
