--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -47,8 +47,8 @@
     <string name="msg_saved_to" formatted="false">Išsaugomi %s</string>
     <string name="msg_no_restrictions">Nerasta ribojimų</string>
     <string name="msg_sure">Įsitikinę?</string>
-    <string name="msg_select">You must select some applications first</string>
-    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
+    <string name="msg_select">Please select some applications</string>
+    <string name="msg_limit">Please select fewer than %d applications</string>
     <string name="msg_done">Atlikta</string>
     <string name="msg_reboot">Reikia perkrauti prietaisą</string>
     <string name="msg_random_now">Atsitiktiniai duomenys</string>
