--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -46,8 +46,8 @@
     <string name="msg_saved_to" formatted="false">Shranjeno v %s</string>
     <string name="msg_no_restrictions">Ni bilo najdenih omejitev</string>
     <string name="msg_sure">Ste prepričani?</string>
-    <string name="msg_select">You must select some applications first</string>
-    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
+    <string name="msg_select">Please select some applications</string>
+    <string name="msg_limit">Please select fewer than %d applications</string>
     <string name="msg_done">Dokončano</string>
     <string name="msg_reboot">Zahtevan ponovni zagon</string>
     <string name="msg_random_now">Naključni podatki</string>
