--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,8 +51,8 @@
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_sure">Are you sure?</string>
-    <string name="msg_select">You must select some applications first</string>
-    <string name="msg_submit">You cannot submit restrictions for more than three applications at a time</string>
+    <string name="msg_select">Please select some applications</string>
+    <string name="msg_limit">Please select fewer than %d applications</string>
     <string name="msg_done">Done</string>
     <string name="msg_reboot">Device restart required</string>
     <string name="msg_random_now">Randomize now</string>
