--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -118,6 +118,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Experimental functions (requires restart)</string>
+    <string name="settings_https">Use secure connections</string>
     <string name="help_application">Aplicatie</string>
     <string name="help_internet">are permisiune Internet</string>
     <string name="help_granted">are permisiune Android</string>
