--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -118,6 +118,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_dangerous">Beperk gevaarlijke functies</string>
     <string name="settings_confidence">Maximum betrouwbaarheidsinterval voor ophalen</string>
     <string name="settings_experimental">Experimentele functies (herstart vereist)</string>
+    <string name="settings_https">Gebruik veilige verbindingen</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
