--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -119,6 +119,7 @@
     <string name="settings_dangerous">Запрет опасных функций</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Экспериментальные функции</string>
+    <string name="settings_https">Use secure connections</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
