--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -120,6 +120,7 @@
     <string name="settings_dangerous">Omeji nevarne funkcije</string>
     <string name="settings_confidence">Največji interval prenašanja omejitev</string>
     <string name="settings_experimental">Funkcije za strokovnjake (zahtevan ponovni zagon)</string>
+    <string name="settings_https">Use secure connections</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
     <string name="help_granted">uporablja Android pravice</string>
